zod/tests/ui/rpc/fail/function_returning_impl_iterator.stderr
error[E0277]: the trait bound `impl Iterator<Item = usize>: futures_core::stream::Stream` is not satisfied
 --> tests/ui/rpc/fail/function_returning_impl_iterator.rs:8:8
  |
6 | #[rpc::namespace]
  | ----------------- required by a bound introduced by this call
7 | impl A {
8 |     fn test(&mut self) -> impl std::iter::Iterator<Item = usize> {
  |        ^^^^ the trait `futures_core::stream::Stream` is not implemented for `impl Iterator<Item = usize>`
  |
  = help: the following other types implement trait `futures_core::stream::Stream`:
            &mut S
            Abortable<St>
            AssertUnwindSafe<S>
            Box<S>
            Buffer<S, Item>
            BufferUnordered<St>
            Buffered<St>
            Either<A, B>
          and $N others
  = note: required for `Pin<&mut impl Iterator<Item = usize>>` to implement `futures_core::stream::Stream`
note: required by a bound in `StreamExt::next`
 --> $CARGO/futures-util-0.3.26/src/stream/stream/mod.rs
  |
  | pub trait StreamExt: Stream {
  |                      ^^^^^^ required by this bound in `StreamExt::next`
